@@ -411,7 +411,7 @@ public final class Square extends BaseCipher
   public Iterator blockSizes()
   {
     ArrayList al = new ArrayList();
-    al.add(new Integer(DEFAULT_BLOCK_SIZE));
+    al.add(Integer.valueOf(DEFAULT_BLOCK_SIZE));
 
     return Collections.unmodifiableList(al).iterator();
   }
@@ -419,7 +419,7 @@ public final class Square extends BaseCipher
   public Iterator keySizes()
   {
     ArrayList al = new ArrayList();
-    al.add(new Integer(DEFAULT_KEY_SIZE));
+    al.add(Integer.valueOf(DEFAULT_KEY_SIZE));
 
     return Collections.unmodifiableList(al).iterator();
   }
