@@ -198,7 +198,7 @@ public class UMacGenerator extends BasePRNG implements Cloneable
     Map map = new HashMap();
     if (cipherBlockSize != 0)
       { // only needed if new or changed
-        map.put(IBlockCipher.CIPHER_BLOCK_SIZE, new Integer(cipherBlockSize));
+        map.put(IBlockCipher.CIPHER_BLOCK_SIZE, Integer.valueOf(cipherBlockSize));
       }
     map.put(IBlockCipher.KEY_MATERIAL, key);
     try
